--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "robksawyer <robksawyer@gmail.com>",
   "description": "Spec assists us in the menial tasks associated with ensuring that campaigns go to market faster than ever.",
   "dependencies": {
+    "body-parser": "^1.9.2",
+    "cookie-parser": "^1.3.3",
+    "cookie-session": "^1.0.2",
     "hubot": "^2.9.3",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.1.0",
