--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-session": "^1.0.2",
     "hubot": "^2.9.3",
     "hubot-diagnostics": "0.0.1",
+    "hubot-dinner": "0.0.3",
     "hubot-google-images": "^0.1.0",
     "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
