--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "description": "Spec assists us in the menial tasks associated with ensuring that campaigns go to market faster than ever.",
   "dependencies": {
     "body-parser": "^1.9.2",
+    "cheerio": "^0.18.0",
     "cookie-parser": "^1.3.3",
     "cookie-session": "^1.0.2",
     "hubot": "^2.9.3",
     "hubot-diagnostics": "0.0.1",
-    "hubot-dinner": "0.0.3",
     "hubot-google-images": "^0.1.0",
     "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
