--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.1",
     "hubot-slack": "^2.2.0",
+    "hubot-starven": "0.0.15",
     "hubot-youtube": "^0.1.2",
     "jsdom": "^1.2.1"
   },
