--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "^1.3.3",
     "cookie-session": "^1.0.2",
     "hubot": "^2.9.3",
+    "hubot-cheese": "0.0.12",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.1.0",
     "hubot-google-translate": "^0.1.0",
@@ -22,7 +23,7 @@
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.1",
     "hubot-slack": "^2.2.0",
-    "hubot-starven": "0.0.38",
+    "hubot-starven": ">=0.0.38",
     "hubot-youtube": "^0.1.2",
     "jsdom": "^1.2.1"
   },
